Removed force wrap on not img link class. We've had some issues with this, so shouldn't be a default

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -34,9 +34,6 @@ a {
 	@include link-active-styles { 	// Mixin for interactions (hover,focus,active)
 		color: $action-respond;
 	}
-	&:not(>img) {
-		@include force-wrap;
-	}
 }
 
 /* ::Import styles */
